# agentmem

./: LICENSE  README.md  pyproject.toml
docs/: AGENT_MANUAL.md  OPTIMIZATION.md  TESTING.md
src/agentmem/: __init__.py  batch.py  cli.py  daemon.py  model.py  patch.py  search.py  store.py  utils.py
src/agentmem.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_batch.py  test_cli_smoke.py  test_compact.py  test_daemon_e2e.py  test_e2e_subprocess.py  test_patch.py  test_search.py  test_session_and_commit.py  test_store_ltm.py
