[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentmem"
version = "0.1.0"
description = "Pure-text CLI memory store for AI agents (LTM/STM) with patch-based updates"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "agentmem contributors" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "mypy>=1.8.0", "ruff>=0.6.0"]

[project.scripts]
agentmem = "agentmem.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
pretty = true
show_error_codes = true
warn_unreachable = true
files = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
